Fixing staffdirectory canvas email blurry

--- a/staffdirectory/css/style.css
+++ b/staffdirectory/css/style.css
@@ -1,50 +1,73 @@
-html, body, * {
+html,
+body,
+* {
   font-family: 'Roboto', sans-serif;
 }
+
 body {
   background: #f8f8f8;
 }
+
+canvas {
+  image-rendering: pixelated;
+}
+
 .container {
   background: #fff;
 }
+
 .nowrap {
   white-space: nowrap;
 }
+
 .uppercase {
   text-transform: uppercase;
 }
+
 .clear {
   clear: both;
 }
+
 .mw-100 {
   max-width: 100%;
 }
+
+.fs-12 {
+  font-size: 12px;
+}
+
 .fs-14 {
   font-size: 14px;
 }
+
 ul.nav {
   width: 100%;
   background: #5e7d00;
   border-bottom: 10px solid #eca13d;
 }
+
 ul.nav li {
   display: inline-block;
   vertical-align: top;
   padding: 10px 15px;
   color: #fff;
 }
+
 ul.nav li.active {
   background: #eca13d;
-  
+
 }
+
 ul.nav li a {
   text-decoration: none;
   color: #fff;
 }
+
 ul.nav li a:hover {
   color: #fff;
   text-decoration: underline;
 }
+
 .checkbox-accordion {
   background: #f8f8f8;
   box-shadow: none;
@@ -53,6 +76,7 @@ ul.nav li a:hover {
   padding: 20px;
   position: relative;
 }
+
 .checkbox-accordion::after {
   content: "";
   border: solid black;
@@ -66,14 +90,16 @@ ul.nav li a:hover {
   top: 26px;
   pointer-events: none;
 }
+
 .checkbox-accordion .accordion-card {
   font-weight: 500;
   width: 100%;
   cursor: pointer;
   padding-right: 20px;
   padding-bottom: 20px;
-  text-transform:uppercase;
+  text-transform: uppercase;
 }
+
 input[type=checkbox].accordion {
   visibility: hidden;
   opacity: 0;
@@ -83,12 +109,14 @@ input[type=checkbox].accordion {
   top: 0;
   left: 0;
 }
-input[type=checkbox].accordion ~ .accordion-content {
+
+input[type=checkbox].accordion~.accordion-content {
   max-height: 0px;
   overflow: hidden;
   transition: max-height 0.5s cubic-bezier(0, 1, 0, 1);
 }
-input[type=checkbox]:checked.accordion ~ .accordion-content {
+
+input[type=checkbox]:checked.accordion~.accordion-content {
   max-height: 1700px;
   transition: max-height 1s ease-in-out;
 }
@@ -99,9 +127,9 @@ input[type=checkbox]:checked.accordion ~ .accordion-content {
   padding: 10px;
   line-height: 20px;
   border-radius: 10px;
-  box-shadow: 3px 4px 5px 0px rgba(187,187,187,0.35);
-  -webkit-box-shadow: 3px 4px 5px 0px rgba(187,187,187,0.35);
-  -moz-box-shadow: 3px 4px 5px 0px rgba(187,187,187,0.35);
+  box-shadow: 3px 4px 5px 0px rgba(187, 187, 187, 0.35);
+  -webkit-box-shadow: 3px 4px 5px 0px rgba(187, 187, 187, 0.35);
+  -moz-box-shadow: 3px 4px 5px 0px rgba(187, 187, 187, 0.35);
 
 }
 
@@ -150,7 +178,7 @@ input[type=checkbox]:checked.accordion ~ .accordion-content {
 .unit-list ul li {
   padding: 0;
   margin: 10px 0;
-  list-style: none;;
+  list-style: none;
 }
 
 .unit-list ul li a {
@@ -189,7 +217,7 @@ nav .pagination {
 
 nav .pagination li .page-link {
   color: #000;
-} 
+}
 
 nav .pagination li.active .page-link {
   background-color: #eca13d;
@@ -199,6 +227,10 @@ nav .pagination li.active .page-link {
 
 .em {
   pointer-events: none;
+}
+
+.em>img {
+  height: 20px;
 }
 
 canvas#email {
@@ -217,6 +249,7 @@ canvas#email {
 .language-changer a {
   text-decoration: none;
   color: #000;
+  outline: 0;
   display: inline-block;
 }
 
@@ -243,15 +276,15 @@ canvas#email {
 }
 
 .back-link:before {
-    content: "\2039";
-    font-weight: 900;
-    -moz-osx-font-smoothing: grayscale;
-    -webkit-font-smoothing: antialiased;
-    display: inline-block;
-    text-rendering: auto;
-    line-height: 1;
-    margin-right: 5px;
-    font-size: 22px;
+  content: "\2039";
+  font-weight: 900;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  display: inline-block;
+  text-rendering: auto;
+  line-height: 1;
+  margin-right: 5px;
+  font-size: 22px;
 }
 
 .footer {
@@ -280,7 +313,9 @@ canvas#email {
   text-align: left;
 }
 
-.footer a, .footer a:visited, .footer a:hover {
+.footer a,
+.footer a:visited,
+.footer a:hover {
   text-decoration: none;
   color: #fff;
 }
@@ -300,22 +335,69 @@ canvas#email {
 
 
 /* Generated by http://responsive-css.spritegen.com Responsive CSS Sprite Generator */
- 
+
 .logo-gov {
   max-width: 100%;
   background-size: 100%;
   background-image: url('https://cdn.jsdelivr.net/gh/vorexfaiq/mpob-assets@v1.3.0/staffdirectory/img/logo-gov-min.png');
 }
- 
-.logo-impac { background-position: 0 0%; background-size: 100%; }
-.logo-bi-small { background-position: 0 9.090909%; background-size: 100%; }
-.logo-ksb { background-position: 0 19.269103%; background-size: 100%; }
-.logo-lgm { background-position: 0 28.239203%; background-size: 100%; }
-.logo-lkm { background-position: 0 37.209302%; background-size: 100%; }
-.logo-ltn { background-position: 0 46.179402%; background-size: 100%; }
-.logo-mg { background-position: 0 55.149502%; background-size: 100%; }
-.logo-mpb { background-position: 0 64.119601%; background-size: 100%; }
-.logo-mpoc { background-position: 0 73.089701%; background-size: 100%; }
-.logo-mpocc { background-position: 0 82.059801%; background-size: 100%; }
-.logo-msc { background-position: 0 91.0299%; background-size: 100%; }
-.logo-mtib { background-position: 0 100%; background-size: 100%; }
+
+.logo-impac {
+  background-position: 0 0%;
+  background-size: 100%;
+}
+
+.logo-bi-small {
+  background-position: 0 9.090909%;
+  background-size: 100%;
+}
+
+.logo-ksb {
+  background-position: 0 19.269103%;
+  background-size: 100%;
+}
+
+.logo-lgm {
+  background-position: 0 28.239203%;
+  background-size: 100%;
+}
+
+.logo-lkm {
+  background-position: 0 37.209302%;
+  background-size: 100%;
+}
+
+.logo-ltn {
+  background-position: 0 46.179402%;
+  background-size: 100%;
+}
+
+.logo-mg {
+  background-position: 0 55.149502%;
+  background-size: 100%;
+}
+
+.logo-mpb {
+  background-position: 0 64.119601%;
+  background-size: 100%;
+}
+
+.logo-mpoc {
+  background-position: 0 73.089701%;
+  background-size: 100%;
+}
+
+.logo-mpocc {
+  background-position: 0 82.059801%;
+  background-size: 100%;
+}
+
+.logo-msc {
+  background-position: 0 91.0299%;
+  background-size: 100%;
+}
+
+.logo-mtib {
+  background-position: 0 100%;
+  background-size: 100%;
+}
